--- a/pflanzen_dashboard/package.json
+++ b/pflanzen_dashboard/package.json
@@ -7,8 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "docker-build": "docker build -t bacb-dashboard .",
-    "docker-run": "docker run -p 3000:3000 -d bacb-dashboard",
+    "docker-build": "docker build -t pflanzen_dashboard .",
+    "docker-run": "docker run -p 3000:3000 -d pflanzen_dashboard",
     "docker-logs": "docker logs -f 293cac6bbea4",
     "docker-stop": "docker stop 293cac6bbea4",
     "docker-remove": "docker rm 293cac6bbea4",
